With Ref to 0.1.1 . Swagger Documentation and Swagger UI .
