# app/Http/Controllers/UserController.php
@@ -12,6 +12,7 @@ use App\Http\Controllers\EmailController;
 class UserController extends Controller {
     /**
      * @SWG\Get(path="/user",
+     * tags={"User"},
      *   summary="Returns list of users",
      *   description="Returns users data",
      *   operationId="user",
@@ -29,6 +30,7 @@ class UserController extends Controller {
 
     /**
      * @SWG\Get(path="/user/{uid}",
+     * tags={"User"},
      *   summary="Returns users data",
      *   description="Returns users data",
      *   operationId="user",
@@ -47,7 +49,10 @@ class UserController extends Controller {
      *  @SWG\Response(
      *     response=400,
      *     description="Invalid user id",
-     *   )
+     *   ),
+     *   security={{
+     *     "token":{}
+     *   }}
      * )
      */
     public function user(Request $request) {
@@ -72,6 +77,7 @@ class UserController extends Controller {
 
      /**
      * @SWG\Post(path="/register",
+      * tags={"User"},
      *   summary="User registration into the system",
      *   description="User registration into the system",
      *   operationId="register",
@@ -151,6 +157,7 @@ class UserController extends Controller {
 
      /**
      * @SWG\Get(path="/activate",
+      * tags={"User"},
      *   summary="Activates user into the system",
      *   description="Activates user into the system",
      *   operationId="activate",
